# admin-api-lib/src/admin_api_lib/models/upload_source.py
@@ -1,9 +1,9 @@
 # coding: utf-8
 
 """
-    extractor-api-lib
+    admin-api-lib
 
-    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+    The API is used for the communication between the admin frontend and the admin backend in the rag project.
 
     The version of the OpenAPI document: 1.0.0
     Generated by OpenAPI Generator (https://openapi-generator.tech)
@@ -20,20 +20,22 @@ import json
 
 
 
-from pydantic import BaseModel, ConfigDict
-from typing import Any, ClassVar, Dict, List, Optional
+from pydantic import BaseModel, ConfigDict, StrictBytes, StrictStr
+from typing import Any, ClassVar, Dict, List, Optional, Tuple, Union
+from admin_api_lib.models.key_value_pair import KeyValuePair
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-class KeyValuePair(BaseModel):
+class UploadSource(BaseModel):
     """
     
     """ # noqa: E501
-    key: Optional[Any] = None
-    value: Optional[Any] = None
-    __properties: ClassVar[List[str]] = ["key", "value"]
+    file: Optional[Union[StrictBytes, StrictStr, Tuple[StrictStr, StrictBytes]]] = None
+    type: StrictStr
+    kwargs: Optional[List[KeyValuePair]] = None
+    __properties: ClassVar[List[str]] = ["file", "type", "kwargs"]
 
     model_config = {
         "populate_by_name": True,
@@ -53,7 +55,7 @@ class KeyValuePair(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of KeyValuePair from a JSON string"""
+        """Create an instance of UploadSource from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -72,21 +74,18 @@ class KeyValuePair(BaseModel):
             },
             exclude_none=True,
         )
-        # set to None if key (nullable) is None
-        # and model_fields_set contains the field
-        if self.key is None and "key" in self.model_fields_set:
-            _dict['key'] = None
-
-        # set to None if value (nullable) is None
-        # and model_fields_set contains the field
-        if self.value is None and "value" in self.model_fields_set:
-            _dict['value'] = None
-
+        # override the default output from pydantic by calling `to_dict()` of each item in kwargs (list)
+        _items = []
+        if self.kwargs:
+            for _item in self.kwargs:
+                if _item:
+                    _items.append(_item.to_dict())
+            _dict['kwargs'] = _items
         return _dict
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of KeyValuePair from a dict"""
+        """Create an instance of UploadSource from a dict"""
         if obj is None:
             return None
 
@@ -94,8 +93,9 @@ class KeyValuePair(BaseModel):
             return cls.model_validate(obj)
 
         _obj = cls.model_validate({
-            "key": obj.get("key"),
-            "value": obj.get("value")
+            "file": obj.get("file"),
+            "type": obj.get("type"),
+            "kwargs": [KeyValuePair.from_dict(_item) for _item in obj.get("kwargs")] if obj.get("kwargs") is not None else None
         })
         return _obj
 
