# extractor-api-lib/src/extractor_api_lib/models/extraction_request.py
@@ -1,37 +1,41 @@
 # coding: utf-8
 
 """
-extractor-api-lib
+    extractor-api-lib
 
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+    No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
 
-The version of the OpenAPI document: 1.0.0
-Generated by OpenAPI Generator (https://openapi-generator.tech)
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
 
-Do not edit the class manually.
+    Do not edit the class manually.
 """  # noqa: E501
 
 
 from __future__ import annotations
-
-import json
 import pprint
 import re  # noqa: F401
-from typing import Any, ClassVar, Dict, List
+import json
 
-from pydantic import BaseModel, ConfigDict, StrictStr
 
+
+
+from pydantic import BaseModel, ConfigDict, StrictBytes, StrictStr
+from typing import Any, ClassVar, Dict, List, Optional, Tuple, Union
+from extractor_api_lib.models.key_value_pair import KeyValuePair
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-
 class ExtractionRequest(BaseModel):
-    """ """  # noqa: E501
-
-    path_on_s3: StrictStr
-    __properties: ClassVar[List[str]] = ["path_on_s3"]
+    """
+    
+    """ # noqa: E501
+    file: Optional[Union[StrictBytes, StrictStr, Tuple[StrictStr, StrictBytes]]] = None
+    type: StrictStr
+    kwargs: Optional[List[KeyValuePair]] = None
+    __properties: ClassVar[List[str]] = ["file", "type", "kwargs"]
 
     model_config = {
         "populate_by_name": True,
@@ -39,13 +43,15 @@ class ExtractionRequest(BaseModel):
         "protected_namespaces": (),
     }
 
+
     def to_str(self) -> str:
         """Returns the string representation of the model using alias"""
         return pprint.pformat(self.model_dump(by_alias=True))
 
     def to_json(self) -> str:
         """Returns the JSON representation of the model using alias"""
-        return self.model_dump_json(by_alias=True, exclude_unset=True)
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
@@ -64,9 +70,17 @@ class ExtractionRequest(BaseModel):
         """
         _dict = self.model_dump(
             by_alias=True,
-            exclude={},
+            exclude={
+            },
             exclude_none=True,
         )
+        # override the default output from pydantic by calling `to_dict()` of each item in kwargs (list)
+        _items = []
+        if self.kwargs:
+            for _item in self.kwargs:
+                if _item:
+                    _items.append(_item.to_dict())
+            _dict['kwargs'] = _items
         return _dict
 
     @classmethod
@@ -78,5 +92,11 @@ class ExtractionRequest(BaseModel):
         if not isinstance(obj, dict):
             return cls.model_validate(obj)
 
-        _obj = cls.model_validate({"path_on_s3": obj.get("path_on_s3")})
+        _obj = cls.model_validate({
+            "file": obj.get("file"),
+            "type": obj.get("type"),
+            "kwargs": [KeyValuePair.from_dict(_item) for _item in obj.get("kwargs")] if obj.get("kwargs") is not None else None
+        })
         return _obj
+
+
