# rag-core-api/src/rag_core_api/models/chat_response.py
@@ -1,37 +1,37 @@
 # coding: utf-8
 
 """
-RAG SIT x Stackit
+    RAG SIT x Stackit
 
-The perfect rag solution.
+    The perfect rag solution.
 
-The version of the OpenAPI document: 1.0.0
-Generated by OpenAPI Generator (https://openapi-generator.tech)
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
 
-Do not edit the class manually.
+    Do not edit the class manually.
 """  # noqa: E501
 
 
 from __future__ import annotations
-
-import json
 import pprint
 import re  # noqa: F401
-from typing import Any, ClassVar, Dict, List
+import json
+
+
+
 
 from pydantic import BaseModel, ConfigDict, Field, StrictStr
-
+from typing import Any, ClassVar, Dict, List
 from rag_core_api.models.information_piece import InformationPiece
-
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-
 class ChatResponse(BaseModel):
-    """ """  # noqa: E501
-
+    """
+    
+    """ # noqa: E501
     answer: StrictStr
     finish_reason: StrictStr = Field(description="    ")
     citations: List[InformationPiece]
@@ -43,13 +43,15 @@ class ChatResponse(BaseModel):
         "protected_namespaces": (),
     }
 
+
     def to_str(self) -> str:
         """Returns the string representation of the model using alias"""
         return pprint.pformat(self.model_dump(by_alias=True))
 
     def to_json(self) -> str:
         """Returns the JSON representation of the model using alias"""
-        return self.model_dump_json(by_alias=True, exclude_unset=True)
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
@@ -68,7 +70,8 @@ class ChatResponse(BaseModel):
         """
         _dict = self.model_dump(
             by_alias=True,
-            exclude={},
+            exclude={
+            },
             exclude_none=True,
         )
         # override the default output from pydantic by calling `to_dict()` of each item in citations (list)
@@ -77,7 +80,7 @@ class ChatResponse(BaseModel):
             for _item in self.citations:
                 if _item:
                     _items.append(_item.to_dict())
-            _dict["citations"] = _items
+            _dict['citations'] = _items
         return _dict
 
     @classmethod
@@ -89,15 +92,11 @@ class ChatResponse(BaseModel):
         if not isinstance(obj, dict):
             return cls.model_validate(obj)
 
-        _obj = cls.model_validate(
-            {
-                "answer": obj.get("answer"),
-                "finish_reason": obj.get("finish_reason"),
-                "citations": (
-                    [SourceDocument.from_dict(_item) for _item in obj.get("citations")]
-                    if obj.get("citations") is not None
-                    else None
-                ),
-            }
-        )
+        _obj = cls.model_validate({
+            "answer": obj.get("answer"),
+            "finish_reason": obj.get("finish_reason"),
+            "citations": [InformationPiece.from_dict(_item) for _item in obj.get("citations")] if obj.get("citations") is not None else None
+        })
         return _obj
+
+
